2017-07-24  Chris Dumez  <cdumez@apple.com>

        Make ExceptionCode a proper enumeration
        https://bugs.webkit.org/show_bug.cgi?id=174771

        Reviewed by Sam Weinig.

        Make ExceptionCode a proper enumeration instead of a typedef to uint8_t.

        * Modules/fetch/FetchBody.h:
        (WebCore::FetchBody::formData):
        * Modules/indexeddb/shared/IDBError.h:
        (WebCore::IDBError::encode):
        (WebCore::IDBError::decode):
        * bindings/js/JSSubtleCryptoCustom.cpp:
        (WebCore::rejectWithException):
        * dom/Exception.h:
        * dom/ExceptionCode.h:
        * fileapi/FileReaderSync.cpp:
        (WebCore::errorCodeToExceptionCode):
        * html/canvas/WebGLRenderingContextBase.cpp:
        (WebCore::WebGLRenderingContextBase::texSubImage2D):
        (WebCore::WebGLRenderingContextBase::texImage2D):
        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::createRequest):
        * xml/XMLHttpRequest.h:

2017-07-24  Simon Fraser  <simon.fraser@apple.com>

        Change "client" coordinates back to match scrolling coordinates
        https://bugs.webkit.org/show_bug.cgi?id=174734
        rdar://problem/33336930

        Reviewed by Tim Horton.

        Baidu.com (which uses jQuery), and various iOS apps make the assumption that getBoundingClientRect() returns a rectangle
        that can be used to set or compare with the scroll position. With visual viewports, that assumption is no longer valid
        when the page is zoomed, or when the keyboard has caused the visual viewport to detach from the layout viewport.

        At this point the compatibility cost of shipping layout viewport-based client rects seems higher than the gain, so revert
        to the shipping behavior. This reverts r216803, and will re-introduce bugs that occurred on zoomed pages on macOS,
        many of which are noted in webkit.org/b/170981.

        * page/FrameView.cpp:
        (WebCore::FrameView::documentToClientOffset):
