@@ -1,3 +1,9 @@
+2017-07-24  Konstantin Tokarev  <annulen@yandex.ru>
+
+        Unreviewed attempt to fix Mac cmake build
+
+        * PlatformMac.cmake:
+
 2017-07-24  Chris Dumez  <cdumez@apple.com>
 
         Make ExceptionCode a proper enumeration
